# api_automation

./: .gitignore  Jenkinsfile  README.md  activate_venv.bat  activate_venv.sh  config.yaml  conftest.py  env.example  pyproject.toml  requirements.txt  run_tests.py
common/: __init__.py  assertions.py  auth_manager.py  config.py  http_client.py  logger.py  test_data.py
examples/: auth_usage_example.py
tests/: __init__.py  test_auth_manager.py  test_chat_history_api.py  test_guest_session_api.py  test_invitation_api.py  test_share_session_api.py  test_user_profile_api.py  test_user_session_api.py  test_voice_chat_api.py
